# buyingsignal

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: README.md
src/buyingsignal/: __init__.py  cli.py  config.py  logging.py  runner.py  worker.py
src/buyingsignal/collectors/: base.py  edgar.py  restapi.py  rss.py
src/buyingsignal/db/: engine.py  models.py  repo.py
src/buyingsignal/scoring/: llm.py  prompts.py  schema.py  score.py
src/buyingsignal/security/: sanitize.py
src/buyingsignal/sink/: slack.py
tests/: test_collectors_parse.py  test_dedup.py  test_llm.py  test_sanitize.py  test_scoring_schema.py
tests/fixtures/: sample_edgar_atom.xml  sample_rss.xml
